--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22604c7c",
+   "id": "6fec4b55",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "90eff2a6",
+   "id": "d62b0fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a64d5152",
+   "id": "57454b33",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e358a8f6",
+   "id": "1f9cd835",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4bee074",
+   "id": "8be94e2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7eec6b0a",
+   "id": "98745dcc",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "18412287",
+   "id": "c71f6218",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "451acabf",
+   "id": "93193179",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422ac3e7",
+   "id": "14d2ef63",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "492a63d9",
+   "id": "7176d703",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c833607",
+   "id": "0a34464f",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df2d851",
+   "id": "541c150a",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd6286e4",
+   "id": "205ea62e",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "446a6247",
+   "id": "47c4d53c",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ad4c9e",
+   "id": "601f5866",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d131a80a",
+   "id": "b9b5319d",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "475577b5",
+   "id": "75bdb886",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6f347972",
+   "id": "dd8baaf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fdd4ba1c",
+   "id": "13f94377",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62976e93",
+   "id": "06f79835",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5cbb5d1c",
+   "id": "52dc1c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9ad37b1e",
+   "id": "aae9e3e4",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "88f2934d",
+   "id": "43763f77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681ab2dd",
+   "id": "d71c64c8",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0308394b",
+   "id": "5d478294",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5f68bd0a",
+   "id": "41db15a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5d8b05cd",
+   "id": "f5bd66be",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "232ffc4b",
+   "id": "441a8d30",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ba0490fe",
+   "id": "54fe7a18",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "24617afc",
+   "id": "c9fdedf2",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c651b274",
+   "id": "53dc7368",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "03751c22",
+   "id": "c2c0d4c5",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "15a42a99",
+   "id": "6375ddf6",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4e3a0bee",
+   "id": "d7a581dd",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38174124",
+   "id": "58710673",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "856dbe67",
+   "id": "be48a55d",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc9199db",
+   "id": "c3134429",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0266aa29",
+   "id": "ec463faa",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2764f597",
+   "id": "d2db91f0",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "156eb72a",
+   "id": "c3478f8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "14d8724f",
+   "id": "80384074",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "48f7b237",
+   "id": "75c047f0",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4098bbce",
+   "id": "4bce2ad2",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "fd856821",
+   "id": "0e3215a6",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ca9b3d6e",
+   "id": "0684bee7",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3f6a8b1e",
+   "id": "d9d69e72",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "110c7307",
+   "id": "09c2b0ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7ba002dd",
+   "id": "089a96c2",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "74efcaa7",
+   "id": "6307a3d7",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2573c53a",
+   "id": "6d954234",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0cc0339b",
+   "id": "c69c1c6b",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e77c05f9",
+   "id": "b202a5c2",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cd9d745f",
+   "id": "11d8e64b",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae5007e",
+   "id": "74d227b7",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4d45de97",
+   "id": "4cf6b3c8",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f890ec0d",
+   "id": "b9eb3e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d470306e",
+   "id": "07a4c177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ad269ddd",
+   "id": "d0ca673e",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "795ea327",
+   "id": "cd5a4f55",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "22b9ea77",
+   "id": "ccd8eb82",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "24957cb3",
+   "id": "0bba244a",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fced81",
+   "id": "9c51fb92",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1f4d69eb",
+   "id": "89b2ab20",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6796fe",
+   "id": "8eba0221",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250935a1",
+   "id": "6d30532a",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bf79b6f6",
+   "id": "558d2fd4",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d0325fd3",
+   "id": "b58c7fe4",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c81841",
+   "id": "ceeb0d34",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ef029150",
+   "id": "518b407f",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8328cc45",
+   "id": "e6386d68",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ba409e26",
+   "id": "b4ebf244",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "eef3a155",
+   "id": "639b076e",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "705ec638",
+   "id": "cf6ae88e",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a826b1d2",
+   "id": "c7a5894f",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "325a504c",
+   "id": "15e459ee",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce6c87b",
+   "id": "2a954441",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e76c6b8",
+   "id": "35eaa442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7aae5975",
+   "id": "fa6b53ae",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aab1f0e",
+   "id": "9453a404",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d84a4ec6",
+   "id": "312d0d6b",
    "metadata": {},
    "source": [
     "# Next steps in improving your Python skills\n",
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4be47134",
+   "id": "81f680e8",
    "metadata": {},
    "source": [
     "# \"No module\" potential fixes\n",
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8913fae2",
+   "id": "57062ce6",
    "metadata": {},
    "source": [
     "Awesome Python site: awesome-python.com"
@@ -2593,8 +2593,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "d996df04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 10, 'b': 20, 'c': 900}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'a':10, 'b':20, 'c':30}\n",
+    "\n",
+    "# replace a value\n",
+    "d['c'] = 900\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ff62e7b2",
+   "id": "bf48c875",
    "metadata": {},
    "outputs": [],
    "source": []
